--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.1.2",
         "bootstrap": "~4.6.1",
         "jquery": "^3.3.1",
         "laravel-vite-plugin": "^0.7.8",
         "popper.js": "^1.14.3",
+        "postcss": "^8.4.49",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.4.16",
         "vite": "^4.5.3"
     },
     "dependencies": {
