--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,18 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "App\\Helpers\\": "app/Helpers/", 
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
     },
+        
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
         }
+        
+        
     },
     "scripts": {
         "post-autoload-dump": [
@@ -63,6 +67,8 @@
             "php-http/discovery": true
         }
     },
+
+    
     "minimum-stability": "stable",
     "prefer-stable": true
 }
